# LingFlow_plus

./: .gitignore  LICENSE  README.md  pyproject.toml
lingflow_plus/: __init__.py  cli.py  constraints.py  coordinator.py  identity_bridge.py  llm_client.py  mcp_registry.py  project_manager.py  quality_gate.py  scheduler.py  tool_router.py
tests/: test_cli_comprehensive.py  test_comprehensive.py  test_coordinator_comprehensive.py  test_identity_bridge.py  test_lingflow_plus.py  test_llm_client.py  test_mcp_registration.py  test_p2_improvements.py  test_scheduler_comprehensive.py
